Details
-
Bug
-
Status: Resolved
-
Minor
-
Resolution: Fixed
-
Impala 2.3.0
-
None
Description
In ClientConnection::DoRpc() there are some paths that don't explicitly Close() a client connection after failure. We should do this to ensure a simple postcondition for the method, and to ensure that connection state is properly reinitialised on the next use.
Similarly, on ThriftClientImpl:Open(), transport_->open() while using SASL actually opens the socket but the call could still throw an exception because of other failures in the SASL framework. To make sure that the socket is not left open on an exception, we explicitly call close() on the socket.
Attachments
Issue Links
- is related to
-
IMPALA-3380 Add TCP timeouts to all RPCs that don't block
- Resolved